# mcp-servers

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
mcp-weather-free/: LICENSE  README.md  __init__.py  main.py  mcp_weather_free.py  pyproject.toml
src/: index.ts
src/aws-kb-retrieval-server/: package.json
src/brave-search/: package.json
src/everart/: package.json
src/everything/: package.json
src/filesystem/: package.json
src/gdrive/: package.json
src/github/: Dockerfile  index.ts  package.json  run.ts  server.ts
src/github/definitions/: credentials.ts  tools.ts
src/gitlab/: package.json
src/google-maps/: package.json
src/memory/: package.json
src/postgres/: package.json
src/puppeteer/: index.ts  package.json  run.ts  server.ts  tsconfig.json
src/puppeteer/definitions/: credentials.ts  tools.ts
src/sequentialthinking/: package.json
src/servers/: weather.ts
src/slack/: index.ts  package.json  run.ts  server.ts  tsconfig.json
src/slack/definitions/: credentials.ts  index.ts  tools.ts
