[project]
name = "mcp-weather-free"
version = "0.1.0"
description = "MCP server for weather data using Open-Meteo free API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "openmeteo-requests>=1.5.0",
    "requests>=2.31.0",
]

[project.scripts]
mcp-weather-free = "mcp_weather_free:main"
